<resources>
    <string name="app_name">fyp</string>
    <string name="user_registration_form">User Registration Form</string>
    <string name="already_register_log_in_here">Already Register | Log In Here</string>
    <string name="user_login_form">User Login Form</string>
    <string name="log_in_here">Log In Here</string>
    <string name="register">Register</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_username">Enter Your UserName</string>
    <string name="enter_your_phonenumber">Enter Your PhoneNumber</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="LogOut">LogOut</string>
    <string name="where_you_want_to_go">Where you want to go</string>
    <string name="from">From"</string>
    <string name="to">To:</string>
    <string name="date">Date:</string>
    <string name="search">Search</string>
    <string name="enter_text">Enter Text</string>
    <string name="generate">Generate</string>
    <string name="select_your_seats">Select your seats</string>

</resources>