<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FF5722"
    android:padding="20dp">

    <TextView
        android:text="@string/user_registration_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#fff"/>

    <EditText
        android:id="@+id/editTextF_Name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_first_name"
        android:autofillHints="@string/enter_your_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="fill_parent"
        android:autofillHints="@string/enter_your_last_name"
        android:layout_height="50dp"
        android:background="#fbfefd"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextF_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextL_Name"
        android:hint="@string/enter_your_last_name"
        android:gravity="center"/>

    <EditText
        android:layout_width="fill_parent"
        android:autofillHints="@string/enter_your_username"
        android:layout_height="50dp"
        android:background="#fbfefd"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/editTextL_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextUserName"
        android:hint="@string/enter_your_username"
        android:gravity="center"/>

    <EditText
        android:layout_width="fill_parent"
        android:autofillHints="@string/enter_your_phonenumber"
        android:layout_height="50dp"
        android:background="#fbfefd"
        android:inputType="textPhonetic"
        android:ems="10"
        android:layout_below="@+id/editTextUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextPhoneNumber"
        android:hint="@string/enter_your_phonenumber"
        android:gravity="center"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="fill_parent"
        android:autofillHints="@string/enter_your_email"
        android:layout_height="50dp"
        android:background="#fbfefd"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/editTextPhoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextEmail"
        android:hint="@string/enter_your_email"
        android:gravity="center"/>


    <EditText
        android:layout_width="fill_parent"
        android:autofillHints="@string/enter_your_password"
        android:layout_height="50dp"
        android:background="#fbfefd"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/editTextPassword"
        android:hint="@string/enter_your_password"
        android:gravity="center"/>

    <Button
        android:text="@string/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/Submit" />

    <Button
        android:text="@string/already_register_log_in_here"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/Login" />


</RelativeLayout>